--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link href="css/motus.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <input type="text" id="input" oninput="this.value = this.value.toUpperCase();">
-    <div style="background-color: rgb(71, 100, 187); width: 12em; height: 2.5em; position: absolute; top: 0; left: 0;"></div>
+    <div class="mobile">
+    <input type="text" id="input" oninput="this.value = this.value.toUpperCase();" class="input">
     <div id="texte-input" class="texte none"></div>
     <div id="texte1" class="texte1 none"></div>
     <div id="lettres-container1" class="lettres-container"></div>
@@ -42,6 +42,7 @@
             
         </div>
     </div>
+</div>
 </body>
 <script src="js/motus.js"></script>
 </html>
