--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
             
         </div>
     </div>
+
+    <button class="btn">Recommencer</button>
 </div>
 </body>
 <script src="js/motus.js"></script>
